--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"description": "",
 	"main": "server.js",
 	"engines": {
-		"node": "10.3.0"
+		"node": "10.16.0",
+		"npm": "6.9.0"
 	},
 	"scripts": {
 		"client-install": "npm install --prefix client",
